RESOLVED FIXED280784
[WebGPU][New test] resource_compatibility is failing - gpuweb.github.io/cts/standalone/?q=webgpu:api,validation,render_pipeline,resource_compatibility:*
https://bugs.webkit.org/show_bug.cgi?id=280784
Summary [WebGPU][New test] resource_compatibility is failing - gpuweb.github.io/cts/s...
Mike Wyrzykowski
Reported 2024-10-02 14:26:37 PDT
[WebGPU][New test] resource_compatibility is failing - gpuweb.github.io/cts/standalone/?q=webgpu:api,validation,render_pipeline,resource_compatibility:*
Attachments
Mike Wyrzykowski
Comment 1 2024-10-02 14:26:51 PDT
Mike Wyrzykowski
Comment 2 2024-10-03 12:22:41 PDT
EWS
Comment 3 2024-10-08 00:42:29 PDT
Committed 284818@main (ad4f7e712c10): <https://commits.webkit.org/284818@main> Reviewed commits have been landed. Closing PR #34641 and removing active labels.
EWS
Comment 4 2024-10-17 09:21:30 PDT
Committed 283286.303@safari-7620-branch (2f022e0fcde6): <https://commits.webkit.org/283286.303@safari-7620-branch> Reviewed commits have been landed. Closing PR #2056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.