[WebGPU][New test] resource_compatibility is failing - gpuweb.github.io/cts/standalone/?q=webgpu:api,validation,render_pipeline,resource_compatibility:* https://bugs.webkit.org/show_bug.cgi?id=280784 rdar://135707855

Reviewed by Dan Glastonbury.

These tests were added to the CTS after we made all the validation ones passing.

Add some logic and error messages for resource compatibility between shader texture types
and the corresponding layouts.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/compute_pipeline-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/resource_compatibility-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
Add passing expectations.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::textureKindEqualsViewDimension):
(WGSL::depthTextureKindEqualsViewDimension):
(WGSL::nameForBindingType):
(WGSL::nameForTextureSampleType):
(WGSL::nameForTextureDepthKind):
(WGSL::nameForTextureKind):
(WGSL::nameForTextureViewDimension):
(WGSL::nameForPrimitiveKind):
(WGSL::errorValidatingTexture):
(WGSL::storageTextureKindEqualsViewDimension):
(WGSL::isStorageTexture):
(WGSL::errorValidatingTypes):
(WGSL::errorValidatingVariableAndEntryMatch):
(WGSL::RewriteGlobalVariables::insertStructs):
(WGSL::isTexture): Deleted.
(WGSL::typesMatch): Deleted.
(WGSL::variableAndEntryMatch): Deleted.
* Source/WebGPU/WebGPU/ComputePipeline.mm:
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::wgslViewDimension):
* Source/WebKit/Shared/WebGPU/WebGPUTextureBindingLayout.cpp:
(WebKit::WebGPU::ConvertToBackingContext::convertToBacking):
(WebKit::WebGPU::ConvertFromBackingContext::convertFromBacking):

Canonical link: https://commits.webkit.org/284818@main