Source/WebGPU/WGSL/GlobalVariableRewriter.cpp
@@ -1612,14 +1612,278 @@ static bool isSampler(const AST::Variable& variable, SamplerBindingType bindingT
     }
 }
 
-static bool isTexture(const AST::Variable& variable, bool isMultisampled)
+static bool textureKindEqualsViewDimension(Types::Texture::Kind kind, TextureViewDimension viewDimension, bool isMultisampled, TextureSampleType sampleType)
 {
-    return bindingTypeForType(variable.storeType()) == (isMultisampled ? BindingType::TextureMultisampled : BindingType::Texture);
+    if (isMultisampled)
+        return kind == Types::Texture::Kind::TextureMultisampled2d && viewDimension == TextureViewDimension::TwoDimensional;
+
+    switch (viewDimension) {
+    case TextureViewDimension::OneDimensional:
+        return kind == Types::Texture::Kind::Texture1d && sampleType != TextureSampleType::Depth;
+    case TextureViewDimension::TwoDimensional:
+        return kind == Types::Texture::Kind::Texture2d;
+    case TextureViewDimension::TwoDimensionalArray:
+        return kind == Types::Texture::Kind::Texture2dArray;
+    case TextureViewDimension::Cube:
+        return kind == Types::Texture::Kind::TextureCube;
+    case TextureViewDimension::CubeArray:
+        return kind == Types::Texture::Kind::TextureCubeArray;
+    case TextureViewDimension::ThreeDimensional:
+        return kind == Types::Texture::Kind::Texture3d && sampleType != TextureSampleType::Depth;
+    }
+
+    return false;
 }
 
-static bool isStorageTexture(const AST::Variable& variable, StorageTextureAccess textureAccess)
+static bool depthTextureKindEqualsViewDimension(Types::TextureDepth::Kind kind, TextureViewDimension viewDimension, bool isMultisampled)
 {
-    switch (bindingTypeForType(variable.storeType())) {
+    if (isMultisampled)
+        return kind == Types::TextureDepth::Kind::TextureDepthMultisampled2d && viewDimension == TextureViewDimension::TwoDimensional;
+
+    switch (viewDimension) {
+    case TextureViewDimension::OneDimensional:
+        return false;
+    case TextureViewDimension::TwoDimensional:
+        return kind == Types::TextureDepth::Kind::TextureDepth2d;
+    case TextureViewDimension::TwoDimensionalArray:
+        return kind == Types::TextureDepth::Kind::TextureDepth2dArray;
+    case TextureViewDimension::Cube:
+        return kind == Types::TextureDepth::Kind::TextureDepthCube;
+    case TextureViewDimension::CubeArray:
+        return kind == Types::TextureDepth::Kind::TextureDepthCubeArray;
+    case TextureViewDimension::ThreeDimensional:
+        return false;
+    }
+
+    return false;
+}
+
+static ASCIILiteral nameForBindingType(BindingType bindingType)
+{
+    switch (bindingType) {
+    default:
+    case BindingType::Undefined:
+        return "Undefined"_s;
+    case BindingType::Buffer:
+        return "Buffer"_s;
+    case BindingType::Texture:
+        return "Texture"_s;
+    case BindingType::TextureMultisampled:
+        return "TextureMultisampled"_s;
+    case BindingType::TextureStorageReadOnly:
+        return "TextureStorageReadOnly"_s;
+    case BindingType::TextureStorageReadWrite:
+        return "TextureStorageReadWrite"_s;
+    case BindingType::TextureStorageWriteOnly:
+        return "TextureStorageWriteOnly"_s;
+    case BindingType::Sampler:
+        return "Sampler"_s;
+    case BindingType::SamplerComparison:
+        return "SamplerComparison"_s;
+    case BindingType::TextureExternal:
+        return "TextureExternal"_s;
+    }
+}
+
+static ASCIILiteral nameForTextureSampleType(TextureSampleType sampleType)
+{
+    switch (sampleType) {
+    case TextureSampleType::Float:
+        return "Float"_s;
+    case TextureSampleType::UnfilterableFloat:
+        return "UnfilterableFloat"_s;
+    case TextureSampleType::Depth:
+        return "Depth"_s;
+    case TextureSampleType::SignedInt:
+        return "SignedInt"_s;
+    case TextureSampleType::UnsignedInt:
+        return "UnsignedInt"_s;
+    default:
+        return "Undefined"_s;
+    }
+}
+
+static ASCIILiteral nameForTextureDepthKind(Types::TextureDepth::Kind kind)
+{
+    switch (kind) {
+    case Types::TextureDepth::Kind::TextureDepth2d:
+        return "TextureDepth2d"_s;
+    case Types::TextureDepth::Kind::TextureDepth2dArray:
+        return "TextureDepth2d"_s;
+    case Types::TextureDepth::Kind::TextureDepthCube:
+        return "TextureDepth2d"_s;
+    case Types::TextureDepth::Kind::TextureDepthCubeArray:
+        return "TextureDepth2d"_s;
+    case Types::TextureDepth::Kind::TextureDepthMultisampled2d:
+        return "Texture2d"_s;
+    default:
+        return "Undefined"_s;
+    }
+}
+
+static ASCIILiteral nameForTextureKind(Types::Texture::Kind kind)
+{
+    switch (kind) {
+    case Types::Texture::Kind::Texture1d:
+        return "Texture1d"_s;
+    case Types::Texture::Kind::Texture2d:
+        return "Texture2d"_s;
+    case Types::Texture::Kind::Texture2dArray:
+        return "Texture2d"_s;
+    case Types::Texture::Kind::TextureCube:
+        return "Texture2d"_s;
+    case Types::Texture::Kind::TextureCubeArray:
+        return "Texture2d"_s;
+    case Types::Texture::Kind::TextureMultisampled2d:
+        return "Texture2d"_s;
+    case Types::Texture::Kind::Texture3d:
+        return "Texture3d"_s;
+    default:
+        return "Undefined"_s;
+    }
+}
+
+static ASCIILiteral nameForTextureViewDimension(TextureViewDimension viewDimension)
+{
+    switch (viewDimension) {
+    case TextureViewDimension::OneDimensional:
+        return "1d"_s;
+    case TextureViewDimension::TwoDimensional:
+        return "2d"_s;
+    case TextureViewDimension::TwoDimensionalArray:
+        return "2d_array"_s;
+    case TextureViewDimension::Cube:
+        return "cube"_s;
+    case TextureViewDimension::CubeArray:
+        return "cube-array"_s;
+    case TextureViewDimension::ThreeDimensional:
+        return "3d"_s;
+    }
+
+    return "undefined"_s;
+}
+
+static ASCIILiteral nameForPrimitiveKind(Types::Primitive::Kind primitiveKind)
+{
+    switch (primitiveKind) {
+    case Types::Primitive::AbstractInt:
+        return "<AbstractInt>"_s;
+    case Types::Primitive::I32:
+        return "int32"_s;
+    case Types::Primitive::U32:
+        return "uint32"_s;
+    case Types::Primitive::AbstractFloat:
+        return "<AbstractFloat>"_s;
+    case Types::Primitive::F16:
+        return "f16"_s;
+    case Types::Primitive::F32:
+        return "f32"_s;
+    case Types::Primitive::Void:
+        return "void"_s;
+    case Types::Primitive::Bool:
+        return "bool"_s;
+    case Types::Primitive::Sampler:
+        return "sampler"_s;
+    case Types::Primitive::SamplerComparison:
+        return "sampler_comparion"_s;
+    case Types::Primitive::TextureExternal:
+        return "texture_external"_s;
+    case Types::Primitive::AccessMode:
+        return "access_mode"_s;
+    case Types::Primitive::TexelFormat:
+        return "texel_format"_s;
+    case Types::Primitive::AddressSpace:
+        return "address_space"_s;
+    }
+
+    return "undefined"_s;
+}
+
+static String errorValidatingTexture(const AST::Variable& variable, const TextureBindingLayout& textureBinding)
+{
+    bool isMultisampled = textureBinding.multisampled;
+    auto targetValue = isMultisampled ? BindingType::TextureMultisampled : BindingType::Texture;
+    auto storeType = variable.storeType();
+    auto bindingForType = bindingTypeForType(storeType);
+    if (bindingForType != targetValue)
+        return makeString("types don't match: WGSL type "_s, nameForBindingType(bindingForType), " target type "_s, nameForBindingType(targetValue));
+
+    auto sampleType = textureBinding.sampleType;
+    const Types::Texture* possibleTexture = std::get_if<Types::Texture>(storeType);
+    if (!possibleTexture) {
+        const Types::TextureDepth* possibleTextureDepth = std::get_if<Types::TextureDepth>(storeType);
+        if (!possibleTextureDepth || sampleType != TextureSampleType::Depth)
+            return makeString("depth validation failed: "_s, nameForTextureSampleType(sampleType));
+
+        bool result = depthTextureKindEqualsViewDimension(possibleTextureDepth->kind, textureBinding.viewDimension, isMultisampled);
+        if (!result)
+            return makeString("viewDimensions don't match: "_s, nameForTextureDepthKind(possibleTextureDepth->kind), ", textureBinding view dimension "_s, nameForTextureViewDimension(textureBinding.viewDimension), ", multisampled = "_s, isMultisampled ? "yes"_s : "no"_s);
+
+        return emptyString();
+    }
+
+    if (!textureKindEqualsViewDimension(possibleTexture->kind, textureBinding.viewDimension, isMultisampled, sampleType) || !possibleTexture->element)
+        return makeString("viewDimensions don't match: "_s, nameForTextureKind(possibleTexture->kind), ", bindingViewDimension = "_s, nameForTextureViewDimension(textureBinding.viewDimension), ", multisampled = "_s, isMultisampled ? "yes"_s : "no"_s, ", bindingSampleType = "_s, nameForTextureSampleType(sampleType));
+
+    bool result = false;
+    if (const auto* primitive = std::get_if<Types::Primitive>(possibleTexture->element)) {
+        switch (sampleType) {
+        case TextureSampleType::Float:
+        case TextureSampleType::UnfilterableFloat:
+            result = primitive->kind == Types::Primitive::F32 || primitive->kind == Types::Primitive::F16;
+            break;
+        case TextureSampleType::Depth:
+            break;
+        case TextureSampleType::SignedInt:
+            result = primitive->kind == Types::Primitive::I32;
+            break;
+        case TextureSampleType::UnsignedInt:
+            result = primitive->kind == Types::Primitive::U32;
+            break;
+        }
+
+        if (!result)
+            return makeString("element types don't match: sampleType "_s, nameForTextureSampleType(sampleType), ", primitive->kind "_s, nameForPrimitiveKind(primitive->kind));
+    }
+
+    if (!result)
+        return makeString("WGSL texture has no elementType: sampleType "_s, nameForTextureSampleType(sampleType));
+
+    return emptyString();
+}
+
+static bool storageTextureKindEqualsViewDimension(Types::TextureStorage::Kind kind, TextureViewDimension viewDimension)
+{
+    switch (viewDimension) {
+    case TextureViewDimension::OneDimensional:
+        return kind == Types::TextureStorage::Kind::TextureStorage1d;
+    case TextureViewDimension::TwoDimensional:
+        return kind == Types::TextureStorage::Kind::TextureStorage2d;
+    case TextureViewDimension::TwoDimensionalArray:
+        return kind == Types::TextureStorage::Kind::TextureStorage2dArray;
+    case TextureViewDimension::Cube:
+        return false;
+    case TextureViewDimension::CubeArray:
+        return false;
+    case TextureViewDimension::ThreeDimensional:
+        return kind == Types::TextureStorage::Kind::TextureStorage3d;
+    }
+
+    return false;
+}
+
+static bool isStorageTexture(const AST::Variable& variable, const StorageTextureBindingLayout& storageTexture)
+{
+    auto textureAccess = storageTexture.access;
+    auto storeType = variable.storeType();
+    const Types::TextureStorage* possibleStorageTexture = std::get_if<Types::TextureStorage>(storeType);
+    if (!possibleStorageTexture)
+        return false;
+
+    if (!storageTextureKindEqualsViewDimension(possibleStorageTexture->kind, storageTexture.viewDimension) || possibleStorageTexture->format != storageTexture.format)
+        return false;
+
+    switch (bindingTypeForType(storeType)) {
     case BindingType::TextureStorageReadOnly:
         return textureAccess == StorageTextureAccess::ReadOnly;
     case BindingType::TextureStorageReadWrite:
@@ -1636,37 +1900,37 @@ static bool isExternalTexture(const AST::Variable& variable)
     return bindingTypeForType(variable.storeType()) == BindingType::TextureExternal;
 }
 
-static bool typesMatch(const AST::Variable& variable, const BindGroupLayoutEntry::BindingMember& bindingMember)
+static String errorValidatingTypes(const AST::Variable& variable, const BindGroupLayoutEntry::BindingMember& bindingMember)
 {
     return WTF::switchOn(bindingMember, [&](const BufferBindingLayout&) {
-        return isBuffer(variable);
+        return isBuffer(variable) ? emptyString() : "WGSL variable is not a buffer"_s;
     }, [&](const SamplerBindingLayout& samplerBinding) {
-        return isSampler(variable, samplerBinding.type);
+        return isSampler(variable, samplerBinding.type) ? emptyString() : "WGSL variable is not a sampler"_s;
     }, [&](const TextureBindingLayout& textureBinding) {
-        return isTexture(variable, textureBinding.multisampled);
+        return errorValidatingTexture(variable, textureBinding);
     }, [&](const StorageTextureBindingLayout& storageTexture) {
-        return isStorageTexture(variable, storageTexture.access);
+        return isStorageTexture(variable, storageTexture) ? emptyString() : "WGSL variable is not a storage texture"_s;
     }, [&](const ExternalTextureBindingLayout&) {
-        return isExternalTexture(variable);
+        return isExternalTexture(variable) ? emptyString() : "WGSL variable is not an external texture"_s;
     });
 }
 
-static bool variableAndEntryMatch(const AST::Variable& variable, const BindGroupLayoutEntry& entry)
+static String errorValidatingVariableAndEntryMatch(const AST::Variable& variable, const BindGroupLayoutEntry& entry)
 {
-    if (!typesMatch(variable, entry.bindingMember))
-        return false;
+    if (auto error = errorValidatingTypes(variable, entry.bindingMember); error.length())
+        return error;
 
     auto variableAddressSpace = variable.addressSpace();
     auto entryAddressSpace = addressSpaceForBindingMember(entry.bindingMember);
     if (variableAddressSpace && *variableAddressSpace != entryAddressSpace)
-        return false;
+        return "variableAddressSpace != entryAddressSpace"_s;
 
     auto variableAccessMode = variable.accessMode();
     auto entryAccessMode = accessModeForBindingMember(entry.bindingMember);
     if (variableAccessMode && *variableAccessMode != entryAccessMode)
-        return false;
+        return "variableAccessMode != entryAccessMode"_s;
 
-    return true;
+    return emptyString();
 }
 
 Result<Vector<unsigned>> RewriteGlobalVariables::insertStructs(PipelineLayout& layout, const UsedResources& usedResources)
@@ -1754,8 +2018,8 @@ Result<Vector<unsigned>> RewriteGlobalVariables::insertStructs(PipelineLayout& l
         for (auto [_, global] : bindingGlobalMap) {
             auto* variable = global->declaration;
             if (auto entryIt = serializedVariables.find(variable); entryIt != serializedVariables.end() && entryIt->value) {
-                if (!variableAndEntryMatch(*variable, *entryIt->value))
-                    return makeUnexpected(Error("Shader is incompatible with layout pipeline"_s, SourceSpan::empty()));
+                if (auto error = errorValidatingVariableAndEntryMatch(*variable, *entryIt->value); error.length())
+                    return makeUnexpected(Error(makeString("Shader is incompatible with layout pipeline: "_s, error), SourceSpan::empty()));
 
                 if (auto* bufferBindingLayout = std::get_if<BufferBindingLayout>(&entryIt->value->bindingMember))
                     bufferBindingLayout->minBindingSize = variable->storeType()->size();
